# LLamification

./: .gitignore  PKGBUILD  README.md  com.github.magillos.llamification.desktop  llamification-git-0e200d2-1-any.pkg.tar.zst  llamification-git-2cdbef4-1-any.pkg.tar.zst  pyproject.toml  test_alias.py
llamification/: __init__.py  __main__.py  config.py
llamification-git/: config  packed-refs
llamification-git/objects/pack/: pack-2aac52059aadc302c37e92d8f27298aa5dee8354.idx  pack-2aac52059aadc302c37e92d8f27298aa5dee8354.pack  pack-2aac52059aadc302c37e92d8f27298aa5dee8354.rev
llamification/gui/: main_window.py  tray.py
llamification/proxy/: providers.py  server.py  translator.py
