[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llamification"
version = "0.1.0"
description = "Lightweight Ollama-compatible proxy for online LLM providers"
readme = "README.md"
license = "MIT"
authors = [
    {name = "LLamification", email = "kerown gmail com"},
]
requires-python = ">=3.10"
dependencies = [
    "PyQt6>=6.5",
    "aiohttp>=3.9",
]

[project.scripts]
llamification = "llamification.__main__:main"

[tool.setuptools.packages.find]
include = ["llamification*"]
